src/main/java/gen/gen/CuteSQLGrammarParser.java
// Generated from C:/Users/moham/OneDrive/Desktop/cute-tiny-database-engine/src/main/java/gen/CuteSQLGrammar.g4 by ANTLR 4.13.1
package gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class CuteSQLGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INTValue=1, DOUBLEValue=2, StringValue=3, CREATE=4, INSERT=5, INTO=6, 
		TABLE=7, PRIMARY=8, KEY=9, STRING=10, INT=11, DOUBLE=12, INDEX=13, ON=14, 
		VALUES=15, UPDATE=16, SET=17, WHERE=18, DELETE=19, FROM=20, SELECT=21, 
		AND=22, OR=23, XOR=24, OpeningParenthesis=25, ClosingParenthesis=26, Comma=27, 
		SemiColon=28, Equals=29, Colon=30, Star=31, GreaterThan=32, GreaterThanEquals=33, 
		LessThan=34, LessThanEquals=35, NotEquals=36, GenericSTRING=37, SPACE=38;
	public static final int
		RULE_cuteSQL = 0, RULE_createTable = 1, RULE_createIndex = 2, RULE_insertIntoTable = 3, 
		RULE_updateTable = 4, RULE_deleteFromTable = 5, RULE_selectFromTable = 6, 
		RULE_primaryColumn = 7, RULE_columnDef = 8, RULE_tableName = 9, RULE_columnName = 10, 
		RULE_columnType = 11, RULE_indexName = 12, RULE_columnValue = 13, RULE_clusteringColumnName = 14, 
		RULE_clusteringColumnValue = 15, RULE_condition = 16, RULE_operator = 17, 
		RULE_starrOperator = 18;
	private static String[] makeRuleNames() {
		return new String[] {
			"cuteSQL", "createTable", "createIndex", "insertIntoTable", "updateTable", 
			"deleteFromTable", "selectFromTable", "primaryColumn", "columnDef", "tableName", 
			"columnName", "columnType", "indexName", "columnValue", "clusteringColumnName", 
			"clusteringColumnValue", "condition", "operator", "starrOperator"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "'('", "')'", "','", "';'", "'='", "':'", "'*'", "'>'", "'>='", 
			"'<'", "'<='", "'!='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "INTValue", "DOUBLEValue", "StringValue", "CREATE", "INSERT", "INTO", 
			"TABLE", "PRIMARY", "KEY", "STRING", "INT", "DOUBLE", "INDEX", "ON", 
			"VALUES", "UPDATE", "SET", "WHERE", "DELETE", "FROM", "SELECT", "AND", 
			"OR", "XOR", "OpeningParenthesis", "ClosingParenthesis", "Comma", "SemiColon", 
			"Equals", "Colon", "Star", "GreaterThan", "GreaterThanEquals", "LessThan", 
			"LessThanEquals", "NotEquals", "GenericSTRING", "SPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CuteSQLGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CuteSQLGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CuteSQLContext extends ParserRuleContext {
		public CreateTableContext createTable() {
			return getRuleContext(CreateTableContext.class,0);
		}
		public CreateIndexContext createIndex() {
			return getRuleContext(CreateIndexContext.class,0);
		}
		public InsertIntoTableContext insertIntoTable() {
			return getRuleContext(InsertIntoTableContext.class,0);
		}
		public UpdateTableContext updateTable() {
			return getRuleContext(UpdateTableContext.class,0);
		}
		public DeleteFromTableContext deleteFromTable() {
			return getRuleContext(DeleteFromTableContext.class,0);
		}
		public SelectFromTableContext selectFromTable() {
			return getRuleContext(SelectFromTableContext.class,0);
		}
		public TerminalNode EOF() { return getToken(CuteSQLGrammarParser.EOF, 0); }
		public CuteSQLContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cuteSQL; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CuteSQLGrammarListener ) ((CuteSQLGrammarListener)listener).enterCuteSQL(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CuteSQLGrammarListener ) ((CuteSQLGrammarListener)listener).exitCuteSQL(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CuteSQLGrammarVisitor ) return ((CuteSQLGrammarVisitor<? extends T>)visitor).visitCuteSQL(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CuteSQLContext cuteSQL() throws RecognitionException {
		CuteSQLContext _localctx = new CuteSQLContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_cuteSQL);
		try {
			setState(46);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(38);
				createTable();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(39);
				createIndex();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(40);
				insertIntoTable();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(41);
				updateTable();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(42);
				deleteFromTable();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(43);
				selectFromTable();
				setState(44);
				match(EOF);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CreateTableContext extends ParserRuleContext {
		public TerminalNode CREATE() { return getToken(CuteSQLGrammarParser.CREATE, 0); }
		public TerminalNode TABLE() { return getToken(CuteSQLGrammarParser.TABLE, 0); }
		public TableNameContext tableName() {
			return getRuleContext(TableNameContext.class,0);
		}
		public TerminalNode OpeningParenthesis() { return getToken(CuteSQLGrammarParser.OpeningParenthesis, 0); }
		public PrimaryColumnContext primaryColumn() {
			return getRuleContext(PrimaryColumnContext.class,0);
		}
		public TerminalNode ClosingParenthesis() { return getToken(CuteSQLGrammarParser.ClosingParenthesis, 0); }
		public List<TerminalNode> Comma() { return getTokens(CuteSQLGrammarParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(CuteSQLGrammarParser.Comma, i);
		}
		public List<ColumnDefContext> columnDef() {
			return getRuleContexts(ColumnDefContext.class);
		}
		public ColumnDefContext columnDef(int i) {
			return getRuleContext(ColumnDefContext.class,i);
		}
		public TerminalNode SemiColon() { return getToken(CuteSQLGrammarParser.SemiColon, 0); }
		public CreateTableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createTable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CuteSQLGrammarListener ) ((CuteSQLGrammarListener)listener).enterCreateTable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CuteSQLGrammarListener ) ((CuteSQLGrammarListener)listener).exitCreateTable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CuteSQLGrammarVisitor ) return ((CuteSQLGrammarVisitor<? extends T>)visitor).visitCreateTable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CreateTableContext createTable() throws RecognitionException {
		CreateTableContext _localctx = new CreateTableContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_createTable);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			match(CREATE);
			setState(49);
			match(TABLE);
			setState(50);
			tableName();
			setState(51);
			match(OpeningParenthesis);
			setState(52);
			primaryColumn();
			setState(57);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Comma) {
				{
				{
				setState(53);
				match(Comma);
				setState(54);
				columnDef();
				}
				}
				setState(59);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(60);
			match(ClosingParenthesis);
			setState(62);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SemiColon) {
				{
				setState(61);
				match(SemiColon);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CreateIndexContext extends ParserRuleContext {
		public TerminalNode CREATE() { return getToken(CuteSQLGrammarParser.CREATE, 0); }
		public TerminalNode INDEX() { return getToken(CuteSQLGrammarParser.INDEX, 0); }
		public IndexNameContext indexName() {
			return getRuleContext(IndexNameContext.class,0);
		}
		public TerminalNode ON() { return getToken(CuteSQLGrammarParser.ON, 0); }
		public TableNameContext tableName() {
			return getRuleContext(TableNameContext.class,0);
		}
		public TerminalNode OpeningParenthesis() { return getToken(CuteSQLGrammarParser.OpeningParenthesis, 0); }
		public ColumnNameContext columnName() {
			return getRuleContext(ColumnNameContext.class,0);
		}
		public TerminalNode ClosingParenthesis() { return getToken(CuteSQLGrammarParser.ClosingParenthesis, 0); }
		public TerminalNode SemiColon() { return getToken(CuteSQLGrammarParser.SemiColon, 0); }
		public CreateIndexContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createIndex; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CuteSQLGrammarListener ) ((CuteSQLGrammarListener)listener).enterCreateIndex(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CuteSQLGrammarListener ) ((CuteSQLGrammarListener)listener).exitCreateIndex(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CuteSQLGrammarVisitor ) return ((CuteSQLGrammarVisitor<? extends T>)visitor).visitCreateIndex(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CreateIndexContext createIndex() throws RecognitionException {
		CreateIndexContext _localctx = new CreateIndexContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_createIndex);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			match(CREATE);
			setState(65);
			match(INDEX);
			setState(66);
			indexName();
			setState(67);
			match(ON);
			setState(68);
			tableName();
			setState(69);
			match(OpeningParenthesis);
			setState(70);
			columnName();
			setState(71);
			match(ClosingParenthesis);
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SemiColon) {
				{
				setState(72);
				match(SemiColon);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InsertIntoTableContext extends ParserRuleContext {
		public TerminalNode INSERT() { return getToken(CuteSQLGrammarParser.INSERT, 0); }
		public TerminalNode INTO() { return getToken(CuteSQLGrammarParser.INTO, 0); }
		public TableNameContext tableName() {
			return getRuleContext(TableNameContext.class,0);
		}
		public List<TerminalNode> OpeningParenthesis() { return getTokens(CuteSQLGrammarParser.OpeningParenthesis); }
		public TerminalNode OpeningParenthesis(int i) {
			return getToken(CuteSQLGrammarParser.OpeningParenthesis, i);
		}
		public List<ColumnNameContext> columnName() {
			return getRuleContexts(ColumnNameContext.class);
		}
		public ColumnNameContext columnName(int i) {
			return getRuleContext(ColumnNameContext.class,i);
		}
		public List<TerminalNode> ClosingParenthesis() { return getTokens(CuteSQLGrammarParser.ClosingParenthesis); }
		public TerminalNode ClosingParenthesis(int i) {
			return getToken(CuteSQLGrammarParser.ClosingParenthesis, i);
		}
		public TerminalNode VALUES() { return getToken(CuteSQLGrammarParser.VALUES, 0); }
		public List<ColumnValueContext> columnValue() {
			return getRuleContexts(ColumnValueContext.class);
		}
		public ColumnValueContext columnValue(int i) {
			return getRuleContext(ColumnValueContext.class,i);
		}
		public List<TerminalNode> Comma() { return getTokens(CuteSQLGrammarParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(CuteSQLGrammarParser.Comma, i);
		}
		public TerminalNode SemiColon() { return getToken(CuteSQLGrammarParser.SemiColon, 0); }
		public InsertIntoTableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_insertIntoTable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CuteSQLGrammarListener ) ((CuteSQLGrammarListener)listener).enterInsertIntoTable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CuteSQLGrammarListener ) ((CuteSQLGrammarListener)listener).exitInsertIntoTable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CuteSQLGrammarVisitor ) return ((CuteSQLGrammarVisitor<? extends T>)visitor).visitInsertIntoTable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InsertIntoTableContext insertIntoTable() throws RecognitionException {
		InsertIntoTableContext _localctx = new InsertIntoTableContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_insertIntoTable);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			match(INSERT);
			setState(76);
			match(INTO);
			setState(77);
			tableName();
			setState(78);
			match(OpeningParenthesis);
			setState(79);
			columnName();
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Comma) {
				{
				{
				setState(80);
				match(Comma);
				setState(81);
				columnName();
				}
				}
				setState(86);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(87);
			match(ClosingParenthesis);
			setState(88);
			match(VALUES);
			setState(89);
			match(OpeningParenthesis);
			setState(90);
			columnValue();
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Comma) {
				{
				{
				setState(91);
				match(Comma);
				setState(92);
				columnValue();
				}
				}
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(98);
			match(ClosingParenthesis);
			setState(100);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SemiColon) {
				{
				setState(99);
				match(SemiColon);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UpdateTableContext extends ParserRuleContext {
		public TerminalNode UPDATE() { return getToken(CuteSQLGrammarParser.UPDATE, 0); }
		public TableNameContext tableName() {
			return getRuleContext(TableNameContext.class,0);
		}
		public TerminalNode SET() { return getToken(CuteSQLGrammarParser.SET, 0); }
		public TerminalNode OpeningParenthesis() { return getToken(CuteSQLGrammarParser.OpeningParenthesis, 0); }
		public List<ColumnNameContext> columnName() {
			return getRuleContexts(ColumnNameContext.class);
		}
		public ColumnNameContext columnName(int i) {
			return getRuleContext(ColumnNameContext.class,i);
		}
		public List<TerminalNode> Equals() { return getTokens(CuteSQLGrammarParser.Equals); }
		public TerminalNode Equals(int i) {
			return getToken(CuteSQLGrammarParser.Equals, i);
		}
		public List<ColumnValueContext> columnValue() {
			return getRuleContexts(ColumnValueContext.class);
		}
		public ColumnValueContext columnValue(int i) {
			return getRuleContext(ColumnValueContext.class,i);
		}
		public TerminalNode ClosingParenthesis() { return getToken(CuteSQLGrammarParser.ClosingParenthesis, 0); }
		public TerminalNode WHERE() { return getToken(CuteSQLGrammarParser.WHERE, 0); }
		public ClusteringColumnNameContext clusteringColumnName() {
			return getRuleContext(ClusteringColumnNameContext.class,0);
		}
		public ClusteringColumnValueContext clusteringColumnValue() {
			return getRuleContext(ClusteringColumnValueContext.class,0);
		}
		public List<TerminalNode> Comma() { return getTokens(CuteSQLGrammarParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(CuteSQLGrammarParser.Comma, i);
		}
		public TerminalNode SemiColon() { return getToken(CuteSQLGrammarParser.SemiColon, 0); }
		public UpdateTableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_updateTable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CuteSQLGrammarListener ) ((CuteSQLGrammarListener)listener).enterUpdateTable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CuteSQLGrammarListener ) ((CuteSQLGrammarListener)listener).exitUpdateTable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CuteSQLGrammarVisitor ) return ((CuteSQLGrammarVisitor<? extends T>)visitor).visitUpdateTable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UpdateTableContext updateTable() throws RecognitionException {
		UpdateTableContext _localctx = new UpdateTableContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_updateTable);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(UPDATE);
			setState(103);
			tableName();
			setState(104);
			match(SET);
			setState(105);
			match(OpeningParenthesis);
			setState(106);
			columnName();
			setState(107);
			match(Equals);
			setState(108);
			columnValue();
			setState(116);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Comma) {
				{
				{
				setState(109);
				match(Comma);
				setState(110);
				columnName();
				setState(111);
				match(Equals);
				setState(112);
				columnValue();
				}
				}
				setState(118);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(119);
			match(ClosingParenthesis);
			setState(120);
			match(WHERE);
			setState(121);
			clusteringColumnName();
			setState(122);
			match(Equals);
			setState(123);
			clusteringColumnValue();
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SemiColon) {
				{
				setState(124);
				match(SemiColon);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeleteFromTableContext extends ParserRuleContext {
		public TerminalNode DELETE() { return getToken(CuteSQLGrammarParser.DELETE, 0); }
		public TerminalNode FROM() { return getToken(CuteSQLGrammarParser.FROM, 0); }
		public TableNameContext tableName() {
			return getRuleContext(TableNameContext.class,0);
		}
		public TerminalNode WHERE() { return getToken(CuteSQLGrammarParser.WHERE, 0); }
		public TerminalNode OpeningParenthesis() { return getToken(CuteSQLGrammarParser.OpeningParenthesis, 0); }
		public List<ColumnNameContext> columnName() {
			return getRuleContexts(ColumnNameContext.class);
		}
		public ColumnNameContext columnName(int i) {
			return getRuleContext(ColumnNameContext.class,i);
		}
		public List<TerminalNode> Equals() { return getTokens(CuteSQLGrammarParser.Equals); }
		public TerminalNode Equals(int i) {
			return getToken(CuteSQLGrammarParser.Equals, i);
		}
		public List<ColumnValueContext> columnValue() {
			return getRuleContexts(ColumnValueContext.class);
		}
		public ColumnValueContext columnValue(int i) {
			return getRuleContext(ColumnValueContext.class,i);
		}
		public TerminalNode ClosingParenthesis() { return getToken(CuteSQLGrammarParser.ClosingParenthesis, 0); }
		public List<TerminalNode> Comma() { return getTokens(CuteSQLGrammarParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(CuteSQLGrammarParser.Comma, i);
		}
		public TerminalNode SemiColon() { return getToken(CuteSQLGrammarParser.SemiColon, 0); }
		public DeleteFromTableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_deleteFromTable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CuteSQLGrammarListener ) ((CuteSQLGrammarListener)listener).enterDeleteFromTable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CuteSQLGrammarListener ) ((CuteSQLGrammarListener)listener).exitDeleteFromTable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CuteSQLGrammarVisitor ) return ((CuteSQLGrammarVisitor<? extends T>)visitor).visitDeleteFromTable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeleteFromTableContext deleteFromTable() throws RecognitionException {
		DeleteFromTableContext _localctx = new DeleteFromTableContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_deleteFromTable);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			match(DELETE);
			setState(128);
			match(FROM);
			setState(129);
			tableName();
			setState(149);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WHERE) {
				{
				setState(130);
				match(WHERE);
				setState(131);
				match(OpeningParenthesis);
				setState(132);
				columnName();
				setState(133);
				match(Equals);
				setState(134);
				columnValue();
				setState(142);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==Comma) {
					{
					{
					setState(135);
					match(Comma);
					setState(136);
					columnName();
					setState(137);
					match(Equals);
					setState(138);
					columnValue();
					}
					}
					setState(144);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(145);
				match(ClosingParenthesis);
				setState(147);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SemiColon) {
					{
					setState(146);
					match(SemiColon);
					}
				}

				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SelectFromTableContext extends ParserRuleContext {
		public TerminalNode SELECT() { return getToken(CuteSQLGrammarParser.SELECT, 0); }
		public TerminalNode Star() { return getToken(CuteSQLGrammarParser.Star, 0); }
		public TerminalNode FROM() { return getToken(CuteSQLGrammarParser.FROM, 0); }
		public TableNameContext tableName() {
			return getRuleContext(TableNameContext.class,0);
		}
		public TerminalNode WHERE() { return getToken(CuteSQLGrammarParser.WHERE, 0); }
		public List<ConditionContext> condition() {
			return getRuleContexts(ConditionContext.class);
		}
		public ConditionContext condition(int i) {
			return getRuleContext(ConditionContext.class,i);
		}
		public List<StarrOperatorContext> starrOperator() {
			return getRuleContexts(StarrOperatorContext.class);
		}
		public StarrOperatorContext starrOperator(int i) {
			return getRuleContext(StarrOperatorContext.class,i);
		}
		public TerminalNode SemiColon() { return getToken(CuteSQLGrammarParser.SemiColon, 0); }
		public SelectFromTableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selectFromTable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CuteSQLGrammarListener ) ((CuteSQLGrammarListener)listener).enterSelectFromTable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CuteSQLGrammarListener ) ((CuteSQLGrammarListener)listener).exitSelectFromTable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CuteSQLGrammarVisitor ) return ((CuteSQLGrammarVisitor<? extends T>)visitor).visitSelectFromTable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SelectFromTableContext selectFromTable() throws RecognitionException {
		SelectFromTableContext _localctx = new SelectFromTableContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_selectFromTable);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			match(SELECT);
			setState(152);
			match(Star);
			setState(153);
			match(FROM);
			setState(154);
			tableName();
			setState(168);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WHERE) {
				{
				setState(155);
				match(WHERE);
				setState(156);
				condition();
				setState(162);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 29360128L) != 0)) {
					{
					{
					setState(157);
					starrOperator();
					setState(158);
					condition();
					}
					}
					setState(164);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(166);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SemiColon) {
					{
					setState(165);
					match(SemiColon);
					}
				}

				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
